Fixed spacing

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -1,13 +1,24 @@
 :root {
-    --color-white: #ffffff;
-    --blueberry: #050542;
-    --turquoise: #66e5bf;
-    --lavender: #a675f5;
-    --lavender-dark: hsl(263, 86%, 60%);
-    --attention: #050542;
-    --attention-background: #05054233;
-    --call-to-action: #fffc86;
-    --rounded: 0.5rem;
-    --pilled: 2rem;
-    --shadow: 0.3rem;
+  --color-white: #ffffff;
+  --blueberry: #050542;
+  --turquoise: #66e5bf;
+  --lavender: #a675f5;
+  --lavender-dark: hsl(263, 86%, 60%);
+  --attention: #050542;
+  --attention-background: #05054233;
+  --call-to-action: #fffc86;
+  --rounded: 0.5rem;
+  --pilled: 2rem;
+  --shadow: 0.3rem;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+span {
+  line-height: 1.5;
 }
